# Librarian

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: tests.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/librarian_api/: __init__.py  config.py  main.py
apps/codex_broker/: pyproject.toml
apps/codex_broker/librarian_broker/: __init__.py  main.py
docs/: api-endpoints.md  architecture.md  evaluation-report.md  evaluation-retrieval-report.json  evaluation-strategy.md  openapi.json  phase-1-ingestor.md
scripts/: chat.py  check.sh  evaluate_retrieval.py  genres.py  index_opensearch.py  ingest_epubs.py  librarian.py  process_metadata_jobs.py  process_summary_jobs.py  rebuild_embeddings.py  setup_local.sh  start_local.sh  stop_local.sh  summarize.py  tags.py  test.sh
scripts/play/: ingest_epubs.py  librarian.py  summary_jobs.py
tests/: __init__.py
tests/api/: test_main.py  test_openapi_spec.py
tests/e2e/: test_local_pipeline.py
tests/evaluation/: test_answer.py  test_comparison.py  test_evaluate_retrieval_script.py  test_golden_corpus.py  test_llm_judge.py  test_reporting.py  test_retrieval.py
tests/fixtures/: README.md
tests/ingestion/: fixtures.py  test_chat.py  test_chat_cli.py  test_chunk.py  test_embedding_ops.py  test_embeddings.py  test_epub.py  test_generation.py  test_genres.py  test_hybrid_search.py  test_ingest.py  test_ingest_epubs.py  test_librarian_cli.py  test_logging.py  test_metadata_jobs.py  test_opensearch.py  test_recommendations.py  test_scan.py  test_search.py  test_storage.py  (+2 more)
(+9 files in other folders)
