[project]
name = "librarian-api"
version = "0.1.0"
description = "API surface for the local-first Librarian app."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "uvicorn[standard]>=0.32.0",
  "librarian-ingestion",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["librarian_api"]
